@startuml

title __PIECE's Class Diagram__\n

  namespace piece {
    class piece.Cavalier {
        + Cavalier()
        + peutJouer()
    }
  }
  

  namespace piece {
    enum CouleurPiece {
      BLANC
      NOIR
    }
  }
  

  namespace piece {
    class piece.FabriquePiece {
        + fabrique()
        - fabriqueFinale()
    }
  }
  

  namespace piece {
    class piece.Fou {
        + Fou()
        + peutJouer()
    }
  }
  

  namespace piece {
    abstract class piece.Piece {
        - estMangé : boolean
        - signe : char
        + changeCoord()
        + craintEchec()
        + getCoord()
        + getCouleur()
        + isMangé()
        + seFaitManger()
        + toChar()
        # Piece()
    }
  }
  

  namespace piece {
    class piece.Roi {
        + Roi()
        + craintEchec()
        + peutJouer()
    }
  }
  

  namespace piece {
    class piece.Tour {
        + Tour()
        + peutJouer()
        - coupHorizontal()
        - coupVertical()
    }
  }
  

  piece.Cavalier -up-|> piece.Piece
  piece.FabriquePiece .up.|> echiquier.IFabriquePiece
  piece.Fou -up-|> piece.Piece
  piece.Piece .up.|> echiquier.IPiece
  piece.Piece o-- echiquier.Coord : coord
  piece.Piece o-- piece.CouleurPiece : couleur
  piece.Roi -up-|> piece.Piece
  piece.Tour -up-|> piece.Piece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
